# tree-sitter-uxntal

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-uxntal.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_uxntal/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterUxntal/: uxntal.h
bindings/swift/TreeSitterUxntalTests/: TreeSitterUxntalTests.swift
queries/: brackets.scm  highlights.scm  outline.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: tests.txt
