[package]
name = "tree-sitter-uxntal"
description = "A programming language for the Uxn virtual machine"
version = "0.1.0"
authors = ["Tyler Gardner <code@tylergardner.org>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "uxntal"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tictoccroc/tree-sitter-uxntal"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
